--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,61 +5,30 @@
 # - Gzip enabled and several security headers added
 # - Adjust server_name, ssl paths, and other values as needed for your environment
 
-# HTTP server (redirects to HTTPS if SSL is configured below)
+# HTTP server (TLS is terminated by Dokploy; serve HTTP only)
 server {
     listen 80;
     listen [::]:80;
 
-    # Replace with your domain or keep _ for a default server
+    # Default server - Dokploy handles TLS termination externally
     server_name _;
-
-    # If you intend to use HTTPS, redirect HTTP to HTTPS.
-    # If you're handling TLS outside (reverse proxy, etc.), you can remove this redirect.
-    return 301 https://$host$request_uri;
-}
-
-# HTTPS server block - expects TLS certs to be mounted into the container
-# If you don't have TLS certificates inside the container, either mount them or
-# use a reverse proxy on the host (traefik/caddy/nginx) to terminate TLS.
-server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-
-    # Replace with your domain
-    server_name _;
-
-    # Paths below assume host certificates are mounted into the container at /etc/ssl/certs and /etc/ssl/private
-    # Update paths if you mount them elsewhere.
-    ssl_certificate /etc/ssl/certs/fullchain.pem;
-    ssl_certificate_key /etc/ssl/private/privkey.pem;
-    ssl_session_timeout 1d;
-    ssl_session_cache shared:MozSSL:10m;
-    ssl_session_tickets off;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers off;
-
-    # Recommended cipher suite for modern clients; keep it up-to-date with best practices
-    ssl_ciphers HIGH:!aNULL:!MD5;
 
     root /usr/share/nginx/html;
     index index.html;
 
     # Gzip compression
     gzip on;
-    gzip_disable "msie6";
+    gzip_types text/plain text/css application/javascript application/json application/rss+xml application/atom+xml image/svg+xml text/xml application/xml;
     gzip_vary on;
     gzip_min_length 256;
     gzip_proxied any;
     gzip_comp_level 5;
-    gzip_types text/plain text/css application/javascript application/json application/rss+xml application/atom+xml image/svg+xml text/xml application/xml;
 
     # Security headers (adjust policies to your needs)
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
     add_header X-XSS-Protection "1; mode=block" always;
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' https: data:;" always;
 
     # Prevent access to hidden files (dotfiles)
     location ~ /\. {
@@ -80,11 +49,6 @@ server {
         try_files $uri =404;
         access_log off;
         add_header Cache-Control "public, max-age=31536000, immutable";
-        # Brotli or gzip precompressed files (optional): if you precompress in build,
-        # you can serve .br/.gz variants by checking Accept-Encoding. Uncomment if you precompress.
-        #
-        # gzip_static on;      # serves .gz if available and client accepts gzip
-        # brotli_static on;    # requires nginx built with brotli module and .br files present
     }
 
     # Fallback for SPA / client-side routes
@@ -98,6 +62,9 @@ server {
     # Optional: tune proxy/buffer sizes for large headers or upstreams
     # large_client_header_buffers 4 16k;
 }
+
+# TLS termination is handled by Dokploy / external reverse-proxy.
+# The HTTP server above serves content; no HTTPS server block is defined here.
 
 # A lightweight HTTP-only server config for environments where TLS is terminated at a reverse proxy.
 # Uncomment and use this block if you prefer to run a plain HTTP container (no TLS inside).
